--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
 	<meta charset="UTF-8" />
 	<!-- TODO -->
-	<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+	<link rel="icon" type="image/svg+xml" href="/favicon.png" />
 	<link rel="stylesheet" href="/source/styles/style.css">
+
 	<meta name="viewport" content="width=device-width, initial-scale=
 	1.0" />
-	<title>isometric-cat-room</title>
+	<title>isometric cat room</title>
 </head>
 
 <body>
